--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
     "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.6.0",
+    "graphql-to-mongodb": "^1.6.5",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.4",
     "monod": "0.0.5-dev",
@@ -24,5 +27,9 @@
   },
   "devDependencies": {
     "case-sensitive-paths-webpack-plugin": "^2.3.0"
-  }
+  },
+  "pkg": {
+    "options": ["experimental-modules"]
+}
+
 }
