--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "material-ui-search-bar": "^1.0.0-beta.14",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.4.0"
   },
   "scripts": {
