--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bulma": "^0.8.0",
     "material-ui-search-bar": "^1.0.0-beta.14",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-pose": "^4.0.10",
     "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.4.0"
   },
