--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.13.0",
     "react-pose": "^4.0.10",
     "react-responsive-carousel": "^3.1.51",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
