--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -10,10 +11,14 @@
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
     "material-ui-search-bar": "^1.0.0-beta.14",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-image": "^2.4.0",
+    "react-modal": "^3.11.2",
     "react-pose": "^4.0.10",
     "react-responsive-carousel": "^3.1.51",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "semantic-ui-react": "^0.88.2"
   },
